# python-project-lvl2

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint_and_test.yml
gendiff/: __init__.py  engine.py  file_parser.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_basic.py
tests/: conftest.py  test_basic.py
