[tool.poetry]
name = "hexlet-code"
version = "0.0.1"
description = ""
authors = ["Sergey Chalkov <seregilr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
