[tool.poetry]
name = "hexlet-code"
version = "0.0.1"
description = ""
authors = ["Sergey Chalkov <seregilr@gmail.com>"]

packages = [
	{ include = "gendiff" }
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
latest = "^0.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.10b0"
pytest = "^6.2.5"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
